[tool.poetry]
name = "super_expert_comptable_v04"
version = "0.1.0"
description = "Application comptable IA pour une fiabilité à 120%"
authors = ["Votre Nom <votre.email@example.com>"]
readme = "README.md"
packages = [{include = "super_expert_comptable_v04"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"

# --- Core Web Framework ---
fastapi = "0.111.0"
uvicorn = {extras = ["standard"], version = "0.29.0"}
pydantic = {extras = ["email"], version = "2.7.1"}
pydantic-settings = "2.2.1"
python-dotenv = "1.0.1"

# --- Database & Security ---
# Version de SQLAlchemy compatible avec Airflow
sqlalchemy = "^1.4.52"
pymysql = "1.1.0"
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-jose = {extras = ["cryptography"], version = "3.3.0"}

# --- Specialized Databases ---
neo4j = "5.20.0"
qdrant-client = "1.9.1"

# --- AI / Machine Learning ---
#transformers = "4.41.2"
#torch = "2.3.1"
spacy = "3.7.5"
paddleocr = "2.7.3"
unstructured = "0.14.5"

# --- Production & Orchestration ---
apache-airflow = "2.9.2"
mlflow = "2.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.1"
httpx = "0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"